--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,14 @@
 <html>
  <head>
    <title>Getting Started</title>
+   <style>
+     html {
+       background-color: black;
+     }
+     body {
+       margin: 0;
+     }
+   </style>
  </head>
  <body>
     <script src="/bundle.js"></script>
