refine resizing method, instead of using resolution, just set width/height by css

--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,13 @@
 <!doctype html>
 <html>
  <head>
+   <link rel="stylesheet" href="/style.css" />
    <title>Getting Started</title>
-   <style>
-     html {
-       background-color: black;
-     }
-     body {
-       margin: 0;
-     }
-   </style>
  </head>
  <body>
-    <script src="/bundle.js"></script>
+   <p class="hoge">Font test　明朝になってる？</p>
+   <p>Font test　ゴシックになってる？</p>
+   <canvas id="game" width="1920" height="1080"/>
+   <script src="/bundle.js"></script>
  </body>
 </html>
