--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,7 @@
    <title>Getting Started</title>
  </head>
  <body>
-   <p class="hoge">Font test　明朝になってる？</p>
-   <p>Font test　ゴシックになってる？</p>
-   <canvas id="game" width="1920" height="1080"/>
+   <canvas id="game" width="1920" height="1080"></canvas>
    <script src="/bundle.js"></script>
  </body>
 </html>
